--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Elogbook &ndash; Dashboard</title>
+    <title>Elogbook</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
